RESOLVED FIXED284944
[CoordinatedGraphics] ASSERT in CoordinatedBackingStore::removeTile
https://bugs.webkit.org/show_bug.cgi?id=284944
Summary [CoordinatedGraphics] ASSERT in CoordinatedBackingStore::removeTile
Carlos Garcia Campos
Reported 2024-12-19 02:39:20 PST
In CoordinatedBackingStoreProxy we remove any tile creation or update registered but not yet processed by the compositor when a new update includes the removal of that tile, but we still pass the removal to the compositor. Then CoordinatedBackingStore tries to remove the tile, but it was never added. We should also remove the tile removal in that case.
Attachments
Carlos Garcia Campos
Comment 1 2024-12-19 02:41:50 PST
EWS
Comment 2 2024-12-19 06:12:46 PST
Committed 288084@main (68c30bf4b53c): <https://commits.webkit.org/288084@main> Reviewed commits have been landed. Closing PR #38201 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-12-19 06:13:15 PST
Note You need to log in before you can comment on or make changes to this bug.