[CoordinatedGraphics] ASSERT in CoordinatedBackingStore::removeTile https://bugs.webkit.org/show_bug.cgi?id=284944

Reviewed by Alejandro G. Castro.

In CoordinatedBackingStoreProxy we remove any tile creation or update
registered but not yet processed by the compositor when a new update
includes the removal of that tile, but we still pass the removal to the
compositor. Then CoordinatedBackingStore tries to remove the tile, but
it was never added. We should also remove the tile removal in that case.

* Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedBackingStoreProxy.cpp:
(WebCore::CoordinatedBackingStoreProxy::Update::appendUpdate):

Canonical link: https://commits.webkit.org/288084@main